# BigDataIntro

Lesson1/: .gitignore  pyproject.toml  readme.md  requirements.txt
Lesson1/notebooks/: classwork.ipynb  homework.ipynb
