[tool.poetry]
name = "big-data-intro-lesson1"
version = "0.1.0"
description = "Seminar and homework for the big data intro course"
authors = ["Aleksandr <alex.iv.vad@gmail.com>"]
readme = "README.md"
packages = [{include = "big_data_intro_lesson1"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pandas = "^1.5.3"
dask = "^2023.2.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"